update replay amp and gait utils

--- a/gait_generation/generate_amp_data.ipynb
+++ b/gait_generation/generate_amp_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,65 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: to-Python converter for std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > already registered; second conversion method ignored.\n",
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: to-Python converter for std::vector<double, std::allocator<double> > already registered; second conversion method ignored.\n",
-      "<frozen importlib._bootstrap>:219: RuntimeWarning: to-Python converter for std::vector<int, std::allocator<int> > already registered; second conversion method ignored.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gait_parameters {'dx': 0, 'dy': 0, 'dtheta': 1.5, 'duration': 2, 'hardware': True, 'trunk_mode': True, 'double_support_ratio': 0.2, 'startend_double_support_ratio': 1.5, 'planned_timesteps': 48, 'replan_timesteps': 10, 'walk_com_height': 0.26, 'walk_foot_height': 0.025, 'walk_trunk_pitch': -2, 'walk_foot_rise_ratio': 0.1, 'single_support_duration': 0.35, 'single_support_timesteps': 10, 'foot_length': 0.16, 'feet_spacing': 0.19, 'zmp_margin': 0.0, 'foot_zmp_target_x': 0.0, 'foot_zmp_target_y': 0.0, 'walk_max_dtheta': 1.0, 'walk_max_dy': 0.1, 'walk_max_dx_forward': 0.1, 'walk_max_dx_backward': 0.1, 'joints': ['left_hip_yaw', 'left_hip_roll', 'left_hip_pitch', 'left_knee', 'left_ankle', 'neck_pitch', 'head_pitch', 'head_yaw', 'head_roll', 'left_antenna', 'right_antenna', 'right_hip_yaw', 'right_hip_roll', 'right_hip_pitch', 'right_knee', 'right_ankle'], 'joint_angles': {'head_pitch': 0, 'head_yaw': 0, 'head_roll': 0, 'neck_pitch': 0, 'left_antenna': 0, 'right_antenna': 0}}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Robot has the following self collisions in neutral position:\n",
-      "  -pelvis_0 collides with left_hip_rotation_0\n",
-      "  -pelvis_0 collides with neck_0\n",
-      "  -pelvis_0 collides with right_hip_rotation_0\n",
-      "  -left_hip_rotation_0 collides with left_hip_0\n",
-      "  -left_hip_0 collides with left_thigh_0\n",
-      "  -left_thigh_0 collides with left_shin_0\n",
-      "  -left_shin_0 collides with left_foot_link_0\n",
-      "  -neck_0 collides with head_body_pitch_0\n",
-      "  -head_body_pitch_0 collides with head_body_yaw_0\n",
-      "  -head_body_yaw_0 collides with head_body_roll_0\n",
-      "  -head_body_roll_0 collides with ear_left_0\n",
-      "  -head_body_roll_0 collides with ear_right_0\n",
-      "  -right_hip_rotation_0 collides with right_hip_0\n",
-      "  -right_hip_0 collides with right_thigh_0\n",
-      "  -right_thigh_0 collides with right_shin_0\n",
-      "  -right_shin_0 collides with right_foot_link_0\n",
-      "WARNING: Can't find head frames in the model, camera_look_at won't work\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Placing the robot in the initial position...\n",
-      "Initial position reached\n",
-      "{'left_hip_yaw': -0.05081933526338989, 'left_hip_roll': -0.07711495926323925, 'left_hip_pitch': 0.09954380185031157, 'left_knee': 0.06707963019327579, 'left_ankle': 0.0037456637299966514, 'neck_pitch': 0.0, 'head_pitch': 0.0, 'head_yaw': 0.0, 'head_roll': 0.0, 'left_antenna': 0.0, 'right_antenna': 0.0, 'right_hip_yaw': -0.04855295641447677, 'right_hip_roll': -0.014517748049874457, 'right_hip_pitch': -0.13273480966972212, 'right_knee': -0.1535471431373323, 'right_ankle': -0.056918317057143605}\n",
-      "center_y_pos: -0.095\n",
-      "recorded 300 frames\n",
-      "avg lin_vel_x -0.0087\n",
-      "avg lin_vel_y 0.0047\n",
-      "avg yaw 0.0444\n",
-      "DONE, saving 0.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dx_range = [-0.5, 0.5]\n",
     "dy_range = [-0.3, 0.3]\n",
@@ -85,10 +29,10 @@
     "with open(os.path.join(presets_dir, f\"medium.json\")) as file:\n",
     "    data = json.load(file)\n",
     "\n",
-    "for i in range(1):\n",
-    "    data[\"dx\"] = 0\n",
-    "    data[\"dy\"] = 0\n",
-    "    data[\"dtheta\"] = 0.8\n",
+    "for i in range(100):\n",
+    "    data[\"dx\"] = np.random.uniform(*dx_range)\n",
+    "    data[\"dy\"] = np.random.uniform(*dy_range)\n",
+    "    data[\"dtheta\"] = np.random.uniform(*dtheta_range)\n",
     "\n",
     "    tmp_preset = os.path.join(tmp_dir, \"preset.json\")\n",
     "    with open(tmp_preset, 'w') as file:\n",
