--- a/gait_generation/generate_amp_data.ipynb
+++ b/gait_generation/generate_amp_data.ipynb
@@ -18,9 +18,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dx_range = [-0.5, 0.5]\n",
-    "dy_range = [-0.3, 0.3]\n",
-    "dtheta_range = [-0.5, 0.5]\n",
+    "dx_range = [-0.6, 0.6]\n",
+    "dy_range = [-0.6, 0.6]\n",
+    "dtheta_range = [-1.0, 1.0]\n",
     "\n",
     "presets_dir = \"awd/data/assets/go_bdx/placo_presets\"\n",
     "tmp_dir = os.path.join(presets_dir, \"tmp\")\n",
@@ -33,6 +33,35 @@
     "    data[\"dx\"] = np.random.uniform(*dx_range)\n",
     "    data[\"dy\"] = np.random.uniform(*dy_range)\n",
     "    data[\"dtheta\"] = np.random.uniform(*dtheta_range)\n",
+    "\n",
+    "    tmp_preset = os.path.join(tmp_dir, \"preset.json\")\n",
+    "    with open(tmp_preset, 'w') as file:\n",
+    "        json.dump(data, file, indent=4)\n",
+    "\n",
+    "    subprocess.run(['python', \"gait_generator.py\", \"--preset\", f\"{tmp_preset}\", \"--name\", f\"{i}\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx_range = [-0.6, 0.6]\n",
+    "dy_range = [-0.6, 0.6]\n",
+    "dtheta_range = [-1.0, 1.0]\n",
+    "\n",
+    "presets_dir = \"awd/data/assets/go_bdx/placo_presets\"\n",
+    "tmp_dir = os.path.join(presets_dir, \"tmp\")\n",
+    "os.makedirs(tmp_dir, exist_ok=True)\n",
+    "\n",
+    "with open(os.path.join(presets_dir, f\"medium.json\")) as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "for i in range(100):\n",
+    "    data[\"dx\"] = 1\n",
+    "    data[\"dy\"] = 0\n",
+    "    data[\"dtheta\"] = 0\n",
     "\n",
     "    tmp_preset = os.path.join(tmp_dir, \"preset.json\")\n",
     "    with open(tmp_preset, 'w') as file:\n",
